<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            style="@style/TextDetailStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@{viewModel.selectedElection.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="3 March 2023" />

        <TextView
            android:id="@+id/lbl_election_info"
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textStyle="bold"
            app:electionInfoTitle="@{viewModel.voterInfoResponse}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="Election Information" />

        <TextView
            android:id="@+id/lbl_state_locations"
            style="@style/TextDetailStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginEnd="@dimen/default_margin"
            android:onClick="@{() -> viewModel.getVotingLocations()}"
            android:text="@string/voting_location_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/lbl_election_info" />

        <TextView
            android:id="@+id/lbl_ballot_information"
            style="@style/TextDetailStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/default_margin"
            android:onClick="@{() -> viewModel.getBallotInformation()}"
            android:text="@string/ballot_information_title"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/lbl_state_locations" />


        <Button
            android:id="@+id/btn_follow_election"
            style="@style/NormalButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:onClick="@{() -> viewModel.onFollowElectionButtonClick()}"
            app:followButtonText="@{viewModel.selectedElection.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>